Header demo notice added. UIKit licensing added to readme file.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>This is the title of the webpage!</title>
 <!-- 		<link rel="stylesheet" href="./lib/normalize/normalize.css"> -->
  		<link rel="stylesheet" href="./lib/uikit/css/uikit.css">
@@ -9,6 +10,12 @@
 
 	<body>
 		<main id="main" role="main">
+
+			<div class="cds-notice">
+				<div class="cds-notice-core">
+					<p>Important: Demo site. Created as part of educational assignment.</p>
+				</div>
+			</div>
 
 			<section class="container page-header home-header">
 				<div class="container-core">
@@ -36,7 +43,7 @@
 			</section>
 
 			<section class="container page-time home-time home-time1">
-				<div class="container-core block-flex flex-column-gap-80 w800-block-flex-column-reverse">
+				<div class="container-core block-flex flex-column-gap-80 w800-block-flex-column">
 
 					<div class="container-col home-time1-col1 flex-col-2">
 
