Line break removed from below 'You' image.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<div class="block-body">
 
 							<div class="block-text">
-								<p>Look closely...This image has 8.5 million black dots, 1 for each person,<br />and 103 red dots, 1 for each fire station. Do you still feel safe?</p>
+								<p>Look closely...This image has 8.5 million black dots, 1 for each person, and 103 red dots, 1 for each fire station. Do you still feel safe?</p>
 							</div>
 
 						</div>
