--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 							<div class="block-text">
 								<p>Click the button below to show your support and join us, as we protest for the re-opening of our much needed fire stations.</p>
-								<p>It's free to show support, and everyone is welcome to support us. Show your support, turn up and let's make a difference!</p>
+								<p>It's free to show support, and everyone is welcome to join us. Show your support, turn up and let's make a difference!</p>
 							</div>
 
 						</div>
