--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 			<div class="cds-notice">
 				<div class="cds-notice-core">
-					<p>Important: Demo site. Created as part of educational assignment.</p>
+					<p>Important: Demo site. Created for educational assignment.</p>
 				</div>
 			</div>
 
@@ -45,7 +45,7 @@
 			<section class="container page-time home-time home-time1">
 				<div class="container-core block-flex flex-column-gap-80 w800-block-flex-column">
 
-					<div class="container-col home-time1-col1 flex-col-2">
+					<div class="container-col container-col1 home-time1-col1 flex-col-2">
 
 						<div class="block-header">
 							<h2 class="title-subsection">Time is important!</h2>
@@ -63,10 +63,18 @@
 
 					</div>
 
-					<div class="container-col home-time1-col2 flex-col-2">
+					<div class="container-col container-col2 home-time1-col2 flex-col-2">
 
 						<div class="block-image block-flex block-flex-around">
-							<img src="./assets/img/time_1.jpg">
+							<img src="./assets/img/time_2.jpg">
+						</div>
+
+						<div class="block-body">
+
+							<div class="block-text">
+								<p>Time it takes for fire engines to reach those in need.</p>
+							</div>
+
 						</div>
 
 					</div>
@@ -103,7 +111,7 @@
 
 							<div class="block-text">
 								<p>We're proud to be Londoners, and we're growing... Fast!</p>
-								<p>Now there are more than 8.5 million people that call London home. Yet, in the past year alone, the Goverment has closed 10 fire stations in London.</p>
+								<p>Now there are more than <a href="https://data.london.gov.uk/dataset/population-change-1939-2015" target="_blank">8.5 million</a> people that call London home. Yet, in the past year alone, the Goverment has closed 10 fire stations in London.</p>
 								<p>Those stations have disappeared, but the people have not!</p>
 							</div>
 
@@ -149,7 +157,7 @@
 						<div class="block-body">
 
 							<div class="block-text">
-								<p>Copyright © 2021 Save Our Stations. All rights reserved.</p>
+								<p>Copyright © 2021 Afzaal Ahmed. All rights reserved.</p>
 							</div>
 
 						</div>
